# EllipticCurve

./: .gitignore  CMakeLists.txt  message.txt
include/: ECurve.hpp  ECurvePoint.hpp  EllipticCurve.hpp
main/: curves.json  digital_signature.cpp  elliptic_curve_example.cpp  encrypt_decrypt.cpp  main.cpp  real_world.cpp
src/: EllipticCurve.cpp  EllipticCurve_Point.cpp
test/: test_curve.cpp  test_elliptic_curve.cpp  test_p256.cpp
